fix groundhog day

--- a/blog/posts/2.md
+++ b/blog/posts/2.md
@@ -4,11 +4,6 @@
 
 # Groundhog day
 
-```C
 void  groundhogDay(){
-	if(love)
-		return
-	else
-		groundhogDay()
+	return [groundhogDay()](https://sinakhalili.com/blog/2.html);
 }
-```
