fix groundhog day link

--- a/blog/posts/2.md
+++ b/blog/posts/2.md
@@ -5,5 +5,9 @@
 # Groundhog day
 
 void  groundhogDay(){
-	return [groundhogDay()](https://sinakhalili.com/blog/2.html);
+
+
+	return [groundhogDay()](https://sinakhalili.com/blog/posts/2.html);
+
+
 }
