--- a/blog/posts/2.md
+++ b/blog/posts/2.md
@@ -3,11 +3,5 @@
 % 2 February 2019
 
 # Groundhog day
+return [groundhog()](https://sinakhalili.com/blog/posts/2.html)
 
-void  groundhogDay(){
-
-
-	return [groundhogDay()](https://sinakhalili.com/blog/posts/2.html);
-
-
-}
